--- a/backend/public/stylesheets/style.css
+++ b/backend/public/stylesheets/style.css
@@ -18,10 +18,6 @@ a {
   margin-top: 0.5em;
 }
 
-.form button {
-  width: 120px;
-}
-
 .results {
   padding-inline-start: 0;
 }
@@ -33,6 +29,28 @@ a {
   list-style: none;
 }
 
-button {
+.btn:hover {
+  background-color: cornflowerblue;
+  border-color: cornflowerblue;
+}
+.btn {
+  cursor: pointer;
+  width: 120px;
+  text-rendering: auto;
+  color: buttontext;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-shadow: none;
+  display: inline-block;
+  text-align: center;
+  align-items: flex-start;
+  background-color: buttonface;
+  box-sizing: border-box;
+  border-width: 2px;
+  border-style: solid;
+  border-color: buttonface;
+  padding: 0.25em 0.5em;
   white-space: nowrap;
+  text-decoration: none;
 }
