--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="app-container">
 
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
 
-<router-outlet></router-outlet>
+</div>
