--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-container">
 
+  <app-page-header></app-page-header>
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 
