--- a/frontend/src/app/components/section-header/section-header.component.html
+++ b/frontend/src/app/components/section-header/section-header.component.html
@@ -1,3 +1,4 @@
-<p>
-  section-header works!
-</p>
+<div class="header-container">
+  <i *ngIf="icon" class="material-icons small">{{ icon }}</i>
+  <h2> {{ text }}</h2>
+</div>
