--- a/frontend/src/app/view/dashboard/dashboard.component.html
+++ b/frontend/src/app/view/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
-<p>
-  dashboard works!
-</p>
+<div class="header-block">
+  <app-section-header text="Scenarios" icon="web"></app-section-header>
+</div>
+
+
+<app-section-header text="Job History" icon="ballot"></app-section-header>
