--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -47,19 +47,27 @@ h1 {
 h2 {
   font-size: 36px;
   font-weight: 700;
+  margin: 0;
+  padding: 0;
 }
 h3 {
   font-size: 36px;
   font-weight: 700;
+  margin: 0;
+  padding: 0;
 }
 h4 {
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 1px; /*5%*/
+  margin: 0;
+  padding: 0;
 }
 h5 {
   font-size: 12px;
   font-weight: 500;
+  margin: 0;
+  padding: 0;
 }
 
 .main-action {
@@ -67,6 +75,7 @@ h5 {
   font-weight: 300;
   font-size: 14px;
   line-height: 16px;
+  letter-spacing: 0.25px;
 }
 .page-action {
   font-size: 12px;
