--- a/frontend/src/app/components/scenario-card/scenario-card.component.html
+++ b/frontend/src/app/components/scenario-card/scenario-card.component.html
@@ -1,3 +1,24 @@
-<p>
-  scenario-card works!
-</p>
+<div
+  class="card-container"
+  [ngStyle]="{
+    'background-image': 'url('+screenshot+')'
+  }"
+  [ngClass]="{
+    'card-container--failed': isFailed,
+    'card-container--grayscaled': !isFailed
+  }"
+>
+
+  <div class="card-title">
+    <h4>{{ title }}</h4>
+  </div>
+
+  <div class="card-actions">
+    <div class="card-action">
+      <i class="material-icons">play_arrow</i>
+    </div>
+  </div>
+
+  <img class="card-watermark" *ngIf="isFailed" src="/assets/images/failed-scenario.svg" alt="">
+
+</div>
