add scenario button

--- a/frontend/src/app/view/dashboard/dashboard.component.html
+++ b/frontend/src/app/view/dashboard/dashboard.component.html
@@ -11,6 +11,8 @@
   <app-scenario-card title="Not Authorise Page" screenshot="/assets/images/stubs/screen5.jpg"></app-scenario-card>
   <app-scenario-card title="Configuration Page"></app-scenario-card>
 
+  <app-add-scenario-button></app-add-scenario-button>
+
 </div>
 
 
