--- a/frontend/src/app/view/dashboard/dashboard.component.html
+++ b/frontend/src/app/view/dashboard/dashboard.component.html
@@ -17,3 +17,9 @@
 
 
 <app-section-header text="Job History" icon="ballot"></app-section-header>
+
+<div class="history-block">
+
+  <app-history-table></app-history-table>
+
+</div>
