--- a/frontend/src/app/view/dashboard/dashboard.component.html
+++ b/frontend/src/app/view/dashboard/dashboard.component.html
@@ -20,6 +20,6 @@
 
 <div class="history-block">
 
-  <app-history-table></app-history-table>
+  <app-history-table [data]="history$ | async"></app-history-table>
 
 </div>
