--- a/frontend/src/app/view/dashboard/dashboard.component.html
+++ b/frontend/src/app/view/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div class="header-block">
-  <app-section-header text="Scenarios" icon="web"></app-section-header>
+  <app-stats></app-stats>
 </div>
+
+<app-section-header text="Scenarios" icon="web"></app-section-header>
 
 <div class="scenarios-block">
 
