--- a/frontend/src/app/view/dashboard/dashboard.component.html
+++ b/frontend/src/app/view/dashboard/dashboard.component.html
@@ -1,8 +1,10 @@
-<div class="header-block">
+<div class="header-block-margin header-block">
   <app-stats></app-stats>
 </div>
 
-<app-section-header text="Scenarios" icon="web"></app-section-header>
+<div class="header-block-margin">
+  <app-section-header text="Scenarios" icon="web"></app-section-header>
+</div>
 
 <div class="scenarios-block">
 
