sidebar and menu-section

--- a/frontend/src/app/view/configuration/configuration.component.html
+++ b/frontend/src/app/view/configuration/configuration.component.html
@@ -1,3 +1,21 @@
-<p>
-  configuration works!
-</p>
+
+
+  <div class="left-sidebar">
+    <app-sidebar></app-sidebar>
+  </div>
+
+  <div class="main-container">
+    <app-section-header icon="web" [text]="'Landing Page'" ></app-section-header>
+
+    <div class="container">
+      <div class="row">
+        <div class="col m5 s12"><app-input-box></app-input-box></div>
+        <div class="col m5 s12"><app-input-box></app-input-box></div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="right-sidebar">
+
+  </div>
