--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,15 @@
-<p>
-  sidebar works!
-</p>
+<h2>Configuration</h2>
+
+<app-menu-section
+  [icon]="'desktop_windows'"
+  [header]="'Viewports'"
+  [items]="['1920 x 1080', '1600 x 900', '1380 x 768']">
+</app-menu-section>
+
+
+<app-menu-section
+  [icon]="'web'"
+  [header]="'Scenarios'"
+  [theme]="'yellow'"
+  [items]="['Home Page', 'Landing Page', 'Login Form', '404 Page', 'Not Authorize Page', 'Configuration Page']">
+</app-menu-section>
