--- a/frontend/src/app/components/input-box/input-box.component.html
+++ b/frontend/src/app/components/input-box/input-box.component.html
@@ -1,3 +1,2 @@
-<p>
-  input-box works!
-</p>
+<label>{{ label }}</label>
+<input class="control-text" type="text" value="{{value}}" placeholder="{{ placeholder }}">
