--- a/frontend/src/app/components/sidebar/sidebar.component.css
+++ b/frontend/src/app/components/sidebar/sidebar.component.css
@@ -5,6 +5,7 @@
   display: block;
 
   background-color: var(--schema-dark);
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
 
   padding-top: 321px;
   padding-left: 28px;
