--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -89,6 +89,7 @@ h1 {
   letter-spacing: 1px; /*5%*/
   margin: 0;
   padding: 0;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 h2 {
   font-size: 36px;
@@ -97,7 +98,7 @@ h2 {
   padding: 0;
 }
 h3 {
-  font-size: 36px;
+  font-size: 18px;
   font-weight: 700;
   margin: 0;
   padding: 0;
