--- a/frontend/src/app/view/configuration/configuration.component.css
+++ b/frontend/src/app/view/configuration/configuration.component.css
@@ -26,7 +26,15 @@ app-section-subheader {
 
 .row {
   margin-left: -.75rem;
+  margin-bottom: 10px;
 }
+
+@media only screen and (min-width: 601px) {
+  .row .col.m5 {
+    margin-right: 22px;
+  }
+}
+
 .first-row {
   margin-top: 30px !important;
 }
