--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,7 @@
+:host {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  z-index: 10;
+}
 .navbar {
   background-color: var(--schema-darkest);
   display: flex;
