--- a/frontend/src/app/components/top-menu/top-menu.component.html
+++ b/frontend/src/app/components/top-menu/top-menu.component.html
@@ -1,3 +1,6 @@
-<p>
-  top-menu works!
-</p>
+<ul class="topmenu">
+  <li class="topmenu-item page-action">Run</li>
+  <li class="topmenu-item page-action">Clone</li>
+  <li class="topmenu-item page-action">Delete</li>
+  <li class="topmenu-item page-action topmenu-item--main">Save</li>
+</ul>
