--- a/frontend/src/app/view/configuration/configuration.component.html
+++ b/frontend/src/app/view/configuration/configuration.component.html
@@ -5,9 +5,11 @@
 
   <div class="main-container">
 
+    <app-top-menu></app-top-menu>
+
     <app-section-header icon="web" [text]="'Landing Page'" ></app-section-header>
     <div class="row first-row">
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Full url of tested page"
           placeholder="Url"
@@ -15,7 +17,7 @@
         </app-input-box>
       </div>
 
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Mismatch Threshold"
           placeholder="0.0 - 1.0"
@@ -27,7 +29,7 @@
 
     <app-section-subheader [text]="'Waiting'"></app-section-subheader>
     <div class="row">
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Ready Selector"
           placeholder=".class | #id | tag"
@@ -35,7 +37,7 @@
         </app-input-box>
       </div>
 
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Delay (miliseconds)"
           placeholder="3000"
@@ -45,7 +47,7 @@
 
     </div>
     <div class="row">
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Ready Event"
           placeholder=""
@@ -58,7 +60,7 @@
 
     <app-section-subheader [text]="'Page Modifications'"></app-section-subheader>
     <div class="row">
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Hide Selectors"
           placeholder=".class | #id | tag"
@@ -68,7 +70,7 @@
     </div>
 
     <div class="row">
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Remove Selectors"
           placeholder=".class | #id | tag"
@@ -80,7 +82,7 @@
 
     <app-section-subheader [text]="'Interaction'"></app-section-subheader>
     <div class="row">
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Click Selectors"
           placeholder=".class | #id | tag"
@@ -88,7 +90,7 @@
         </app-input-box>
       </div>
 
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Scroll to Selector"
           placeholder=".class | #id | tag"
@@ -98,7 +100,7 @@
 
     </div>
     <div class="row">
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Hover Selectors"
           placeholder=".class | #id | tag"
@@ -106,7 +108,7 @@
         </app-input-box>
       </div>
 
-      <div class="col m5 s12">
+      <div class="col l5 m12 s12">
         <app-input-box
           label="Post Interaction Wait"
           placeholder="1000"
