Run button makes call to backend

--- a/frontend/src/app/components/page-header/page-header.component.css
+++ b/frontend/src/app/components/page-header/page-header.component.css
@@ -38,3 +38,7 @@
 .action .main-action-btn:hover {
   fill: var(--schema-dark);
 }
+
+.action .main-action-btn:active {
+  fill: var(--headers-yellow);
+}
