--- a/frontend/src/app/components/page-header/page-header.component.html
+++ b/frontend/src/app/components/page-header/page-header.component.html
@@ -3,7 +3,7 @@
 <div class="action">
   <span class="main-action">Run All Scenarios</span>
 
-  <svg class="main-action-btn" width="62" height="62" viewBox="0 0 62 62" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <svg (click)="onClickRun()" class="main-action-btn" width="62" height="62" viewBox="0 0 62 62" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path
       fill-rule="evenodd"
       clip-rule="evenodd"
