--- a/frontend/src/app/view/dashboard/dashboard.component.html
+++ b/frontend/src/app/view/dashboard/dashboard.component.html
@@ -8,12 +8,19 @@
 
 <div class="scenarios-block">
 
+  <app-scenario-card *ngFor="let scenario of scenarios$ | async"
+    [title]="scenario.label"
+    screenshot="/assets/images/stubs/screen1.png">
+  </app-scenario-card>
+
+<!--
   <app-scenario-card title="Home Page" screenshot="/assets/images/stubs/screen1.png"></app-scenario-card>
   <app-scenario-card title="Landing Page" screenshot="/assets/images/stubs/screen2.png" [isFailed]="true"></app-scenario-card>
   <app-scenario-card title="Login Form" screenshot="/assets/images/stubs/screen3.png"></app-scenario-card>
   <app-scenario-card title="404 Page" screenshot="/assets/images/stubs/screen4.png"></app-scenario-card>
   <app-scenario-card title="Not Authorise Page" screenshot="/assets/images/stubs/screen5.jpg"></app-scenario-card>
   <app-scenario-card title="Configuration Page"></app-scenario-card>
+-->
 
   <app-add-scenario-button></app-add-scenario-button>
 
