--- a/frontend/src/app/components/scenario-card/scenario-card.component.css
+++ b/frontend/src/app/components/scenario-card/scenario-card.component.css
@@ -23,6 +23,7 @@
 .card-container--grayscaled {
   /* http://css3.bradshawenterprises.com/filters/ */
   __filter: grayscale(100%) brightness(1.2);
+  __filter: saturate(.2) blur(2px);
   filter: saturate(.2);
 }
 
