--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
 <app-menu-section
   [icon]="'desktop_windows'"
   [header]="'Viewports'"
-  [items]="['1920 x 1080', '1600 x 900', '1380 x 768']">
+  [items]="viewports$ | async">
 </app-menu-section>
 
 
@@ -11,5 +11,5 @@
   [icon]="'web'"
   [header]="'Scenarios'"
   [theme]="'yellow'"
-  [items]="['Home Page', 'Landing Page', 'Login Form', '404 Page', 'Not Authorize Page', 'Configuration Page']">
+  [items]="scenarios$ | async">
 </app-menu-section>
