make sidebar dummy

--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
 <app-menu-section
   [icon]="'desktop_windows'"
   [header]="'Viewports'"
-  [items]="viewports$ | async">
+  [items]="viewports">
 </app-menu-section>
 
 
@@ -11,5 +11,5 @@
   [icon]="'web'"
   [header]="'Scenarios'"
   [theme]="'yellow'"
-  [items]="scenarios$ | async">
+  [items]="scenarios">
 </app-menu-section>
