bind form values

--- a/frontend/src/app/components/input-box/input-box.component.html
+++ b/frontend/src/app/components/input-box/input-box.component.html
@@ -1,2 +1,7 @@
 <label>{{ label }}</label>
-<input class="control-text" type="text" value="{{value}}" placeholder="{{ placeholder }}">
+<input
+  class="control-text"
+  type="text"
+  value="{{value}}"
+  placeholder="{{ placeholder }}"
+>
