--- a/frontend/src/app/components/top-menu/top-menu.component.html
+++ b/frontend/src/app/components/top-menu/top-menu.component.html
@@ -2,5 +2,5 @@
   <li class="topmenu-item page-action">Run</li>
   <li class="topmenu-item page-action">Clone</li>
   <li class="topmenu-item page-action">Delete</li>
-  <li class="topmenu-item page-action topmenu-item--main">Save</li>
+  <li class="topmenu-item page-action topmenu-item--main"><button type="submit">Save</button></li>
 </ul>
