--- a/frontend/src/app/view/configuration/configuration.component.html
+++ b/frontend/src/app/view/configuration/configuration.component.html
@@ -11,77 +11,78 @@
 
   <div class="main-container">
 
+    <form (ngSubmit)="save(formRef)" #formRef="ngForm">
+
     <app-top-menu></app-top-menu>
 
     <app-section-header icon="web" [text]="selectedScenarioLabel$ | async" ></app-section-header>
     <div class="row first-row">
+
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Full url of tested page"
-          placeholder="Url"
-          [value]="url">
-        </app-input-box>
+        <label>Full url of tested page</label>
+        <input class="control-text" type="text" [ngModel]="(selectedScenario$ | async).url" name="url" required>
       </div>
 
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Mismatch Threshold"
-          placeholder="0.0 - 1.0"
-          [value]="">
-        </app-input-box>
+        <label>Mismatch Threshold</label>
+        <input class="control-text" type="text" [ngModel]="(selectedScenario$ | async).misMatchThreshold" name="misMatchThreshold" placeholder="0.0 - 1.0">
       </div>
+
     </div>
 
 
     <app-section-subheader [text]="'Waiting'"></app-section-subheader>
     <div class="row">
+
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Ready Selector"
-          placeholder=".class | #id | tag"
-          [value]="">
-        </app-input-box>
+        <label>Ready Selector</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).readySelector"
+               name="readySelector"
+               placeholder=".class | #id | tag">
       </div>
 
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Delay (milliseconds)"
-          placeholder="3000"
-          [value]="">
-        </app-input-box>
+        <label>Delay (milliseconds)</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).delay"
+               name="delay"
+               placeholder="0">
       </div>
 
     </div>
     <div class="row">
-      <div class="col l5 m12 s12">
-        <app-input-box
-          label="Ready Event"
-          placeholder=""
-          [value]="">
-        </app-input-box>
-      </div>
-    </div>
 
+      <div class="col l5 m12 s12">
+        <label>Ready Event</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).readyEvent"
+               name="readyEvent"
+               placeholder="">
+      </div>
+
+    </div>
 
 
     <app-section-subheader [text]="'Page Modifications'"></app-section-subheader>
     <div class="row">
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Hide Selectors"
-          placeholder=".class | #id | tag"
-          [value]="">
-        </app-input-box>
+
+        <label>Hide Selectors</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).hideSelectors"
+               name="hideSelectors"
+               placeholder=".class | #id | tag">
       </div>
     </div>
-
     <div class="row">
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Remove Selectors"
-          placeholder=".class | #id | tag"
-          [value]="">
-        </app-input-box>
+
+        <label>Remove Selectors</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).removeSelectors"
+               name="removeSelectors"
+               placeholder=".class | #id | tag">
       </div>
     </div>
 
@@ -89,39 +90,45 @@
     <app-section-subheader [text]="'Interaction'"></app-section-subheader>
     <div class="row">
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Click Selectors"
-          placeholder=".class | #id | tag"
-          [value]="">
-        </app-input-box>
+
+        <label>Click Selectors</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).clickSelectors"
+               name="clickSelectors"
+               placeholder=".class | #id | tag">
       </div>
 
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Scroll to Selector"
-          placeholder=".class | #id | tag"
-          [value]="">
-        </app-input-box>
+
+        <label>Scroll to Selector</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).scrollToSelector"
+               name="scrollToSelector"
+               placeholder=".class | #id | tag">
       </div>
 
     </div>
     <div class="row">
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Hover Selectors"
-          placeholder=".class | #id | tag"
-          [value]="">
-        </app-input-box>
+
+        <label>Hover Selectors</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).hoverSelectors"
+               name="hoverSelectors"
+               placeholder=".class | #id | tag">
       </div>
 
       <div class="col l5 m12 s12">
-        <app-input-box
-          label="Post Interaction Wait"
-          placeholder="1000"
-          [value]="">
-        </app-input-box>
+
+        <label>Post Interaction Wait (milliseconds)</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).postInteractionWait"
+               name="postInteractionWait"
+               placeholder="0">
       </div>
     </div>
+
+    </form>
 
   </div>
 
