--- a/frontend/src/app/components/top-menu/top-menu.component.css
+++ b/frontend/src/app/components/top-menu/top-menu.component.css
@@ -5,6 +5,7 @@
   margin: 0;
 }
 
+button,
 .topmenu-item {
   color: var(--menu-item-disabled);
   cursor: pointer;
@@ -13,15 +14,23 @@
   transition: color 0.25s, background-color 0.25s;
 }
 
-.topmenu-item--main {
+button {
+  border: none;
   color: var(--schema-white);
   background-color: var(--schema-dark);
+  padding: 2px 9px;
+  border-radius: 7px;
+}
+
+.topmenu-item--main {
+  padding: 0;
 }
 
 .topmenu-item + .topmenu-item {
   margin-left: 30px;
 }
 
+button:hover,
 .topmenu-item:hover {
   color: var(--schema-white);
   background-color: var(--menu-item-disabled);
